<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat">
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/main_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <Button
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:text="@string/add"
            android:layout_height="wrap_content"
            android:onClick="onAddActivityClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>-->

    </LinearLayout>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_toRightOf="@id/btn1"
        android:layout_weight="1"
        android:onClick="Start"
        android:text="@string/begin_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AddExe"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="428dp"
        android:layout_height="wrap_content"
        android:onClick="AllExes"
        android:text="@string/list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>